# certbot-dns-arsys

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.rst  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: docker-build.yml  docker.yml  publish.yml  snap-publish.yml  test.yml
.secrets/: .example_arsys.ini  .gitignore
certbot_dns_arsys/: __init__.py
certbot_dns_arsys/_internal/: arsys_client.py  dns_arsys.py
openspec/changes/archive/2026-06-18-certbot-dns-arsys-plugin/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-18-certbot-dns-arsys-plugin/specs/dns-authenticator/: spec.md
openspec/changes/archive/2026-06-18-certbot-dns-arsys-plugin/specs/packaging-and-ci/: spec.md
openspec/changes/archive/2026-06-19-add-dependabot/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-add-dependabot/specs/packaging-and-ci/: spec.md
openspec/changes/archive/2026-06-19-add-docker-build-test/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-add-docker-build-test/specs/packaging-and-ci/: spec.md
openspec/changes/archive/2026-06-19-add-format-check/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-add-format-check/specs/packaging-and-ci/: spec.md
openspec/changes/archive/2026-06-19-add-funding-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-add-readme-badges/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-add-readme-troubleshooting/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-add-snap-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-enhance-ci-test-reporting/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-enhance-pypi-publish/: design.md  proposal.md  tasks.md
openspec/changes/fresh-repo-migration/: tasks.md
openspec/specs/arsys-soap-client/: spec.md
openspec/specs/packaging-and-ci/: spec.md
openspec/specs/propagation-polling/: spec.md
snap/: snapcraft.yaml
tests/: test_arsys_client.py  test_dns_arsys.py  test_funding.py  test_propagation.py  test_snapcraft.py
(+6 files in other folders)
